<resources>
    <string name="app_name">PICKer</string>
    <string name="plaqueta">Tag</string>
    <string name="tipo">Type</string>
    <string name="localizacao">Location</string>
    <string name="limpar">Clean</string>
    <string name="save">Save</string>
    <string name="nao_pode_ser_vazio">Cannot be empty</string>
    <string name="situacao">Situation</string>
    <string name="localizado">Located</string>
    <string name="Avançado">Advanced</string>
    <string name="title_activity_recycler_view_item">recyclerViewItem</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="title_activity_recycle_view_item">RecycleViewItem</string>

    //provisório
    <integer name="plaqueta1">234434</integer>
    <integer name="plaqueta2">234577</integer>
    <integer name="plaqueta3">237566</integer>
    <integer name="plaqueta4">423434</integer>
    <integer name="plaqueta5">423532</integer>

    <string name="tipo1">Table</string>
    <string name="tipo2">Computer</string>
    <string name="tipo3">Chair</string>
    <string name="tipo5">shutter</string>

    <string name="barracao">Shed</string>
    <string name="coworking1">Coworking 01</string>
    <string name="coworking2">Coworking 02</string>
    <string name="coworking3">Coworking 03</string>
    <string name="coworking4">Coworking 03</string>

    <string name="encontrado1">Found</string>
    <string name="encontrado2">Found</string>
    <string name="encontrado3">Found</string>
    <string name="encontrado4">Found</string>

    <string name="nao_encontrado">Not Found</string>
    <string name="ler_codigo_de_barra">Read barcode</string>
    <string name="excluir">Delete</string>
    <string name="add">Add</string>
    <string name="sobre">About</string>
    <string name="novo">New</string>
    <string name="alterar">Alterar</string>
    <string name="naoLocalizado">Not Located</string>
    <string name="tipo4">shutter</string>
    <string name="inserir_manualmente">" Insert Manually"</string>
    <string name="warning">Warning</string>
    <string name="ok">Ok</string>
    <string name="confirmation">Confirmation</string>
    <string name="do_you_really_want_to_delete">Do you really want to delete?</string>
    <string name="error_trying_to_insert">Error trying to insert!</string>
    <string name="error_tryying_to_change">Error tryying to change!</string>
    <string name="error_trying_to_delete">Error trying to delete</string>
    <string name="item_list">Item List</string>
    <string name="new_item">New Item</string>
    <string name="edit_item">Edit Item</string>
    <string name="list">List</string>
    <string name="user_not_found">User not found</string>
    <string name="donwload_csv">Donwload Csv</string>


</resources>